--- a/android/src/main/res/layout/photo_editor_view.xml
+++ b/android/src/main/res/layout/photo_editor_view.xml
@@ -82,17 +82,16 @@
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/guideline" />
 
-  <TextView
-    android:id="@+id/txtCurrentTool"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:singleLine="true"
-    android:text="@string/app_name"
-    android:textColor="@android:color/white"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/guideline" />
+<!--  <TextView-->
+<!--    android:id="@+id/txtCurrentTool"-->
+<!--    android:layout_width="wrap_content"-->
+<!--    android:layout_height="wrap_content"-->
+<!--    android:singleLine="true"-->
+<!--    android:textColor="@android:color/white"-->
+<!--    app:layout_constraintBottom_toBottomOf="parent"-->
+<!--    app:layout_constraintEnd_toEndOf="parent"-->
+<!--    app:layout_constraintStart_toStartOf="parent"-->
+<!--    app:layout_constraintTop_toBottomOf="@+id/guideline" />-->
 
   <TextView
     android:id="@+id/btnSave"
@@ -106,6 +105,7 @@
     android:paddingVertical="6dp"
     android:text="@string/done"
     android:textStyle="bold"
+    android:textColor="@color/white"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/guideline" />
 
