--- a/android/src/main/res/layout/row_editing_tools.xml
+++ b/android/src/main/res/layout/row_editing_tools.xml
@@ -19,15 +19,15 @@
         app:layout_constraintStart_toStartOf="parent"
         tools:src="@drawable/ic_brush" />
 
-    <TextView
-        android:id="@+id/txtTool"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:textColor="@android:color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imgToolIcon"
-        tools:text="@string/label_brush" />
+<!--    <TextView-->
+<!--        android:id="@+id/txtTool"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="4dp"-->
+<!--        android:textColor="@android:color/white"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/imgToolIcon"-->
+<!--        tools:text="@string/label_brush" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
