android: add gifs to image + localizations

--- a/android/src/main/res/values-vi/string.xml
+++ b/android/src/main/res/values-vi/string.xml
@@ -1,28 +1,28 @@
 <resources>
-  <string name="app_name">中越之家</string>
-  <string name="label_brush">画笔</string>
-  <string name="label_shape">形状</string>
-  <string name="label_oval">椭圆形</string>
-  <string name="label_rectangle">矩形</string>
-  <string name="label_line">线条</string>
-  <string name="label_emoji">表情符号</string>
-  <string name="label_sticker">贴纸</string>
-  <string name="label_eraser">橡皮擦</string>
-  <string name="label_eraser_mode">橡皮擦模式</string>
-  <string name="label_text">文本</string>
-  <string name="label_filter">滤镜</string>
-  <string name="label_adjust">调整</string>
-  <string name="msg_save_image">是否要退出而不保存图像？</string>
-  <string name="app_intent_name">照片编辑器</string>
-  <string name="msg_save_image_to_share">请保存图片以进行分享</string>
-  <string name="msg_share_image">分享图片</string>
-  <string name="save_error">保存失败。请重试！</string>
-  <string name="done">完成</string>
-  <string name="saving">保存</string>
-  <string name="label_opacity">不透明度</string>
-  <string name="cancel">取消</string>
-  <string name="save">保存</string>
-  <string name="discard">取消</string>
+  <string name="app_name">ZYZJ</string>
+  <string name="label_brush">Bàn chải</string>
+  <string name="label_shape">Hình dạng</string>
+  <string name="label_oval">Hình bầu dục</string>
+  <string name="label_rectangle">Hình chữ nhật</string>
+  <string name="label_line">Dòng</string>
+  <string name="label_emoji">Biểu tượng cảm xúc</string>
+  <string name="label_sticker">nhãn dán</string>
+  <string name="label_eraser">Cục tẩy</string>
+  <string name="label_eraser_mode">Chế độ xóa</string>
+  <string name="label_text">Văn bản</string>
+  <string name="label_filter">Bộ lọc</string>
+  <string name="label_adjust">Điều chỉnh</string>
+  <string name="msg_save_image">Bạn có muốn thoát mà không lưu hình ảnh không? </string>
+  <string name="app_intent_name">Trình chỉnh sửa ảnh</string>
+  <string name="msg_save_image_to_share">Hãy lưu hình ảnh để chia sẻ</string>
+  <string name="msg_share_image">Chia sẻ ảnh</string>
+  <string name="save_error">Lưu không thành công. Vui lòng thử lại! </string>
+  <string name="done">Xong</string>
+  <string name="saving">Đang lưu</string>
+  <string name="label_opacity">Độ mờ</string>
+  <string name="cancel">Huỷ</string>
+  <string name="save">Lưu</string>
+  <string name="discard">Huỷ bỏ</string>
 
   <string-array name="photo_editor_emoji">
 
