--- a/android/src/main/res/layout/add_text_dialog.xml
+++ b/android/src/main/res/layout/add_text_dialog.xml
@@ -5,8 +5,8 @@
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:background="#B3000000"
-  focusableInTouchMode="true"
-  android:focusable="true" 
+  android:focusableInTouchMode="true"
+  android:focusable="true"
   android:orientation="vertical">
 
   <TextView
