--- a/android/src/main/res/drawable/ic_colorfilter.xml
+++ b/android/src/main/res/drawable/ic_colorfilter.xml
@@ -1,21 +1,41 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="28dp"
-    android:height="28dp"
-    android:viewportWidth="28"
-    android:viewportHeight="28">
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
   <path
-      android:pathData="M5,1.5L23,1.5A3.5,3.5 0,0 1,26.5 5L26.5,23A3.5,3.5 0,0 1,23 26.5L5,26.5A3.5,3.5 0,0 1,1.5 23L1.5,5A3.5,3.5 0,0 1,5 1.5z"
-      android:strokeWidth="3"
-      android:fillColor="#00000000"
-      android:strokeColor="#ffffff"/>
+      android:pathData="M8.51,2V8.5H2V7.81C2,4.17 4.17,2 7.81,2H8.51Z"
+      android:fillColor="#FFFDFB"/>
   <path
-      android:strokeWidth="1"
-      android:pathData="M14.5,5.5h8v8h-8z"
-      android:fillColor="#ffffff"
-      android:strokeColor="#ffffff"/>
+      android:pathData="M22,7.81V8.5H15.51V2H16.19C19.83,2 22,4.17 22,7.81Z"
+      android:fillColor="#FFFDFB"/>
   <path
-      android:strokeWidth="1"
-      android:pathData="M5.5,14.5h8v8h-8z"
-      android:fillColor="#ffffff"
-      android:strokeColor="#ffffff"/>
+      android:pathData="M22,15.5V16.19C22,19.83 19.83,22 16.19,22H15.51V15.5H22Z"
+      android:fillColor="#FFFDFB"/>
+  <path
+      android:pathData="M8.51,15.5V22H7.81C4.17,22 2,19.83 2,16.19V15.5H8.51Z"
+      android:fillColor="#FFFDFB"/>
+  <path
+      android:pathData="M8.51,8.5H2V15.5H8.51V8.5Z"
+      android:strokeAlpha="0.4"
+      android:fillColor="#FFFDFB"
+      android:fillAlpha="0.4"/>
+  <path
+      android:pathData="M22,8.5H15.51V15.5H22V8.5Z"
+      android:strokeAlpha="0.4"
+      android:fillColor="#FFFDFB"
+      android:fillAlpha="0.4"/>
+  <path
+      android:pathData="M15.51,8.5H8.51V15.5H15.51V8.5Z"
+      android:fillColor="#FFFDFB"/>
+  <path
+      android:pathData="M15.51,2H8.51V8.5H15.51V2Z"
+      android:strokeAlpha="0.4"
+      android:fillColor="#FFFDFB"
+      android:fillAlpha="0.4"/>
+  <path
+      android:pathData="M15.51,15.5H8.51V22H15.51V15.5Z"
+      android:strokeAlpha="0.4"
+      android:fillColor="#FFFDFB"
+      android:fillAlpha="0.4"/>
 </vector>
